Fix help button '?' broken alignment due to h2 css tweak.

--- a/client/src/components/molecules/HelpButton/HelpButton.css
+++ b/client/src/components/molecules/HelpButton/HelpButton.css
@@ -1,7 +1,7 @@
 .help-button-text {
     position: absolute;
-    top: -15px;
-    left: 14px;
+    top: 1px;
+    left: 11.5px;
     cursor: default;
     color: white;
 }
